--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,9 +1,13 @@
 {
     "name":"NoBobux",
-    "version": "1.0",
+    "version": "0.0.0.1",
     "manifest_version": 2,
     "description": "Hides your Robux count on Roblox websites. That's it.",
     "author": "MacAndSwiss",
+    "icons": {
+        "128": "icon128.png",
+        "48": "icon48.png"
+    },
     "content_scripts": [{
         "matches": ["*://*.roblox.com/*"],
         "js": ["content.js"],
